Fixed hanging footer on small devices

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -6,3 +6,9 @@ body{
 .wrapper{
   min-height: 100vh;
 }
+
+@media(max-width:600px){
+  .wrapper{
+    min-height: 240vh;
+  }
+}
