--- a/ui/src/components/footerNav.css
+++ b/ui/src/components/footerNav.css
@@ -13,4 +13,14 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0px;
+  /* text-align: center; */
+}
+
+/* Media query for small screens */
+@media(max-width: 533px) {
+  .footer {
+    grid-template-columns: 1fr;
+    width: 600px;
+    overflow: hidden;
+  }
 }
